--- a/gale/settings/monitoring/overview/index.html
+++ b/gale/settings/monitoring/overview/index.html
@@ -3129,8 +3129,8 @@
 </ul>
 <p>Monitoring supports the following features:</p>
 <ol>
-<li><strong>Audit Logs</strong>: Enables the admin to view the log entries of all the changes made across their account by the member users. <a href="../audit-logs/" target="_blank">Learn more</a>.</li>
-<li><strong>Agent Analytics Dashboard</strong>: Empowers the admin to make informed decisions on agents deployed in their account by analyzing real-time performance metrics. <a href="../analytics/agent-analytics-dashboard/" target="_blank">Learn more</a>.</li>
+<li><strong>Audit Logs</strong>: From logins to model deployments, the enhanced Audit Logs dashboard ensures you stay secure and compliant with detailed, time-stamped logs. <a href="../audit-logs/" target="_blank">Learn more</a>.</li>
+<li><strong>Agent Analytics Dashboard</strong>: Empowers admins to make informed decisions on agents deployed in their account, and ensure their peak performance by analyzing real-time performance metrics. <a href="../analytics/agent-analytics-dashboard/" target="_blank">Learn more</a>.</li>
 </ol>
 
 
